send update button

--- a/src/app/user-manager/user-manager.page.html
+++ b/src/app/user-manager/user-manager.page.html
@@ -20,7 +20,7 @@
   </ion-refresher>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button style="margin: 25px; --background: #614385;" (click) = "sendUpdate()">
-      <ion-icon name="arrow-dropup"></ion-icon>
+      <p style="font-size: 12px;"><ion-icon name="arrow-round-up"></ion-icon></p><p style="font-size: 12px;">Update</p>
     </ion-fab-button>
   </ion-fab>
   <ion-label style="color:white;">
